--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,17 @@
 		<version>3.1</version>
 	</dependency>
     
-	</dependencies>
+    <dependency>
+		<groupId>com.rainier.permission</groupId>
+		<artifactId>auth_core</artifactId>
+		<version>0.1.8-SNAPSHOT</version>
+	</dependency>
 	
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
