--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,10 @@
 		<artifactId>commons-httpclient</artifactId>
 		<version>3.1</version>
 	</dependency>
-    
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+    	<groupId>org.freemarker</groupId>
+		<artifactId>freemarker</artifactId>
+		<version>2.3.19</version>
     </dependency>
   </dependencies>
 </project>
