--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,15 @@
 			<artifactId>jackson-core-asl</artifactId>
 			<version>1.9.6</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-lgpl</artifactId>
 			<version>1.9.6</version>
 		</dependency>
+		<dependency>
+	      <groupId>org.apache.commons</groupId>
+	      <artifactId>commons-lang3</artifactId>
+	      <version>3.5</version>
+	    </dependency>
 	</dependencies>
 </project>
